== master

== 1.0.0 / 2011-05-12

* Celebrate

== 0.10.4 / 2011-04-14

* Fix translations not being available under certain environments in Rails applications

== 0.10.3 / 2011-04-07

* Fix state initialization failing in ActiveRecord 3.0.2+ when using with_state scopes for the default scope

== 0.10.2 / 2011-03-31

* Use more integrated state initialization hooks for ActiveRecord, Mongoid, and Sequel
* Remove mass-assignment filtering usage in all ORM integrations
* Only support official Mongoid 2.0.0 release and up (no more RC support)
* Fix attributes getting initialized more than once if different state machines use the same attribute
* Only initialize states if state is blank and blank is not a valid state
* Fix instance / class helpers failing when used with certain libraries (such as Thin)

== 0.10.1 / 2011-03-22

* Fix classes with multiple state machines failing to initialize in ActiveRecord / Mongoid / Sequel integrations

== 0.10.0 / 2011-03-19

* Support callback terminators in MongoMapper 0.9.0+
* Fix pluralization integration on DataMapper 1.0.0 and 1.1.0
* Allow transition guards to be bypassed for event / transition / path helpers
* Allow state / condition requirements to be specified for all event / transition / path helpers
* Add the ability to skip automatically initializing state machines on #initialize
* Add #{name}_paths for walking the available paths in a state machine
* Add Mongoid 2.0.0+ support
* Use around hooks to improve compatibility with other libraries in ActiveModel / ActiveRecord / MongoMapper integrations
* Add support for MassAssignmentSecurity feature in ActiveModel integrations
* Add support for more observer hooks within MongoMapper integrations
* Add i18n support for MongoMapper validation errors
* Update support for MongoMapper integration based on rails3 branch
* Fix objects not getting marked as dirty in all integrations when #{name}_event is set
* Generate warnings when conflicting state / event names are detected