@@ -1,5 +1,7 @@
 == master
 
+* Fix Rails 3.1 deprecation warnings for configuring engine locales [Stefan Penner]
+
 == 1.0.0 / 2011-05-12
 
 * Celebrate
